
      - Collector #697: Multiple selection properties were incorrectly
        marshalled. note than any non-ascii multiple selection properties
        modified in versions without this fix will have been corrupted in
        the zodb.

      - Collector #256: Added a check in _doChangeUser to make sure 
        passwords isn't encrypted twice.


  Zope 2.6.1 beta 1

    Bugs Fixed

      - VirtualHostMonster handles empty Mapping paths properly.
    
      - Deadlock prevention code added.

        It was possible for earlier versions of ZODB to deadlock when
        using multiple storages.  If multiple transactions committed
        concurrently and both transactions involved two or more shared
        storages, deadlock was possible.  This problem has been fixed
        by introducing a sortKey() method to the transaction and
        storage APIs that is used to define an ordering on transaction
        participants.  This solution will prevent deadlocks provided
        that all transaction participants that use locks define a
        valid sortKey() method.  A warning is raised if a participant
        does not define sortKey().  For backwards compatibility,
        BaseStorage provides a sortKey() that uses __name__.

      - Fixed bug in FileStorage related to object uncreation.  An
        attempt to load an uncreated object now raises KeyError.

      - Fixed a couple bugs in FileStorage recover() that wrote
        incorrect backpointers.

      - Fixed data_txn attribute of iterator data records to use
        the transaction id of the previous transaction, even if it
        also has a data_txn field.

      - Fixed conflict resolution bug that raised a NameError when a
        class involved in a conflict could not be loaded.

      - Fixed C extensions that included standard header files before
        Python.h, which is not allowed.

      - Added code to ThreadedAsync/LoopCallback.py to work around a